# Projects

./: README.md
data-processing-api/: README.md  main.py  pyproject.toml
data-processing-api/processor/: aggregate.py  clean.py  load_data.py  url_load.py
data-processing-api/tests/: test_processor.py
data-processing-api/tests/__pycache__/: test_processor.cpython-313-pytest-8.3.5.pyc.14032  test_processor.cpython-313-pytest-8.3.5.pyc.6292
ecommerce-api/tests/: test_load_data.py
etl_pipeline/: pyproject.toml  run_pipeline.py
etl_pipeline/data/: processed_data.parquet
etl_pipeline/etl_pipe/: data_transform.py  db_loader.py  web_scraper.py
etl_pipeline/tests/: test_transform.py
web-scraping-api/: .gitignore  README.md  main.py  pyproject.toml
web-scraping-api/scraper/: google_sheet.py  scraper.py
web-scraping-api/tests/: test_scraper.py
